--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,31 @@
+<%- include("partials/header")%>
+
 <h1>INDEX PAGE!!</h1>
 
 <p> <% blogs.forEach(function(blog){ %></p>
-    <div>
-        <h2> <%= blog.title%></h2>
-        <img src="<%=blog.image%>" alt="">
-        <span><%= blog.created%></span>
-        <p> <%= blog.body%></p>
-    </div>
+    
+    <h2> <%= blog.title%></h2>
+    <img src="<%=blog.image%>" alt="">
+    <span><%= blog.created%></span>
+    <p> <%= blog.body%></p>
+    <a href="/blogs/<%= blog._id%>">Read More</a>
+
+
+    <!-- <div class="ui centred card">
+        <div class="image">
+            <img src="<%=blog.image%>" alt="">
+        </div>
+        <div class="content">
+        <a class="header"><%= blog.title%></a>
+        <div class="meta">
+            <span class="date"><%= blog.created%></span>
+        </div>
+        <div class="description">
+            <%= blog.body%>
+        </div>
+        </div>
+    </div> -->
 
 <% }) %>
+
+<%- include("partials/footer")%>
