--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,30 +2,34 @@
 
 <h1>INDEX PAGE!!</h1>
 
-<p> <% blogs.forEach(function(blog){ %></p>
-    
-    <h2> <%= blog.title%></h2>
-    <img src="<%=blog.image%>" alt="">
-    <span><%= blog.created%></span>
-    <p> <%= blog.body%></p>
-    <a href="/blogs/<%= blog._id%>">Read More</a>
-
-
-    <!-- <div class="ui centred card">
-        <div class="image">
-            <img src="<%=blog.image%>" alt="">
+<div class="ui main text container">
+    <div class="ui huge header">RESTful Blog App</div>
+    <div class="ui top  attached segment">
+        <div class="ui divided items">
+            <% blogs.forEach(function(blog){ %>
+                <div class="item">
+                    <div class="image">
+                        <img src="<%= blog.image %>" >
+                    </div>
+                    <div class="content">
+                         <a class="header" href="/blogs/<%= blog._id %>"><%=blog.title%></a>
+                         <div class="meta">
+                             <span><%= blog.created.toDateString() %></span>
+                         </div>
+                         <div class="description">
+                             <p><%- blog.body.substring(0, 100) %>...</p>
+                         </div>
+                         <div class="extra">
+                             <a class="ui floated basic violet button" href="/blogs/<%= blog._id %>">
+                                 Read More
+                                 <i class="right chevron icon"></i>
+                             </a>
+                         </div>
+                    </div>
+                </div>
+            <% }) %>
         </div>
-        <div class="content">
-        <a class="header"><%= blog.title%></a>
-        <div class="meta">
-            <span class="date"><%= blog.created%></span>
-        </div>
-        <div class="description">
-            <%= blog.body%>
-        </div>
-        </div>
-    </div> -->
-
-<% }) %>
+    </div>
+</div>
 
 <%- include("partials/footer")%>
