--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,7 +15,7 @@
             </div>
             <div class="field">
                 <label>Title</label>
-                <textarea name="blog[body]" id="" cols="30" rows="10"></textarea>
+                <textarea name="blog[body]" id="" cols="30" rows="10" required></textarea>
             </div>
             <input class="ui violet basic button" type="submit">
         </form>
